# zuti

./: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  tailwind.config.js
.github/: dependabot.yaml
.github/workflows/: build-release.yml  build.yml  format-check.yml  quality.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: commands.ts  constants.ts  patterns.ts  stores.ts  theme.ts
src/lib/components/: AddressPortList.svelte  Footer.svelte  Header.svelte  Icon.svelte  NetworkNavLink.svelte  OnOffBadge.svelte  OnOffButton.svelte  OnlineBadge.svelte  SideBar.svelte  Spinner.svelte  ThemeToggle.svelte
src/lib/components/core/: Footer.svelte  Header.svelte  SideBar.svelte
src/lib/components/network/: AssignedAddressesCard.svelte  NetworkNavLink.svelte  NetworkRoutesCard.svelte  NetworkStatusBadge.svelte
src/lib/components/node/: NodeListeningOnCard.svelte  NodeSurfaceAddressesCard.svelte
src/lib/zerotier/: api.ts  models.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
src/routes/networks/[id]/: +page.svelte  +page.ts
src/routes/networks/join/: +page.svelte
