[package]
name = "zuti"
version = "0.2.0"
description = "Zuti"
authors = ["Guillaume berdeaux guillaume.berdeaux@pm.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
directories = "5.0.1"
tauri = { version = "2.0.0-rc.0", features = [] }
tauri-plugin-shell = "2.0.0-beta.9"
tauri-plugin-http = "2.0.0-beta.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

