[package]
name = "zuti"
version = "0.2.0"
description = "Zuti"
authors = ["Guillaume berdeaux guillaume.berdeaux@pm.me"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc.3", features = [] }

[dependencies]
directories = "5.0.1"
tauri = { version = "2.0.0-rc.6", features = [] }
tauri-plugin-shell = "2.0.0-rc.2"
tauri-plugin-http = "2.0.0-rc.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

